--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,9 @@ steps:
   #   args:
   #     - "-c"
   #     - "cat package.json && echo 'Package.json content printed above.'"
+  - name: "gcr.io/cloud-builders/npm"
+    entrypoint: "bash"
+    args: ["-c", "rm -rf node_modules package-lock.json || true"]
 
   - name: "gcr.io/cloud-builders/npm"
     args: ["install", "--force"]
