--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = https://shopinggo.info
+REACT_APP_API_URL = https://shopingo.info
 client_id =1043514981991-50nrdq6cst3teco3ft2m36h06r90qsq8.apps.googleusercontent.com
