--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-google-autocomplete": "^2.7.3",
