--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.1",
     "dayjs": "^1.11.10",
     "font-awesome": "^4.7.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.12.2",
     "react-dom": "^18.2.0",
