--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL=https://shopingo.info
-REACT_APP_API_KEY=AIzaSyApGkJz8QdsYC3YN1DdpeChapUgQxJJ6N8
-client_id=1043514981991-50nrdq6cst3teco3ft2m36h06r90qsq8.apps.googleusercontent.com
+REACT_APP_API_KEY=
+client_id=
